# projectum

./: .gitignore  CHANGELOG.md  DISTRO.md  LICENSE  README.md  RELEASING.md  main.py  projectum.sh  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  package.yml  publish-pypi.yml
docs/: make_screenshots.py
docs/site/: index.html
packaging/: README.md  make_icon.py
packaging/aur/: .SRCINFO  PKGBUILD
packaging/flatpak/: io.github.wleeaf.Projectum.desktop  io.github.wleeaf.Projectum.metainfo.xml  io.github.wleeaf.Projectum.yml
packaging/macos/: projectum.icns
projectum/: __init__.py  anims.py  app.py  calendar.py  links.py  store.py  theme.py  update.py  widgets.py  youtube.py
tests/: conftest.py  test_app.py  test_calendar.py  test_features.py  test_links.py  test_settings_dialog.py  test_store.py  test_themes.py  test_update.py
